--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,13 +45,17 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              {% for item in site.nav_item %}
-                <li>
-                  <a href="{{ item.url }}">{{ item.text }}</a>
-                </li>
-              {% endfor %}
-            </ul>
+              <!-- Dynamic Social Links -->
+        	{% if site.linkedin_username %}
+        	<li><a href="{{ site.linkedin_username }}" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+        	{% endif %}
+        	{% if site.github_username %}
+        	<li><a href="{{ site.github_username }}" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
+        	{% endif %}
+        	{% if site.medium_username %}
+        	<li><a href="{{ site.medium_username }}" target="_blank"><i class="fa fa-medium"></i> Medium</a></li>
+        	{% endif %}
+	    </ul>
           </div>
       </div>
   </nav>
-  {% endif %}
